--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head><title>Home</title></head>
   <body>
     <nav>
-      <a href = 'Homepage.html'> Home | </a>
+      <a href = 'index.html'> Home | </a>
       <a href = 'about.html'> About | </a> 
       <a href = 'contact.html'> Phone | </a> 
     </nav>
